# parallel-divsufsort

./: .gitmodules  CMakeLists.txt  README.md
CMakeModules/: AppendCompilerFlags.cmake
benchmarks/: OVERVIEW.md  resultPar.txt  resultSeq.txt
examples/: CMakeLists.txt  main.cpp  timing.cpp
include/: CMakeLists.txt  divsufsort.h
lib/: CMakeLists.txt  divsufsort.cpp  divsufsort_private.h  parallel.hpp.cmake  sequence.h  sssort.cpp  trsort.cpp  utils.cpp  utils.h
